--- a/src/app/case/case.component.html
+++ b/src/app/case/case.component.html
@@ -1,3 +1,8 @@
-<div class="navbar navbar-expand-lg navbar-light bg-light">
-    case
+<div>
+    <div class="position">
+        <div class="container">成功案例<span>SUCCESS CASE</span></div>
+    </div>
+    <div class="appcontainer">
+        container
+    </div>
 </div>
