--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -20,7 +20,7 @@
                 </ul>
             </div>
             <div class="footer_list fleft">
-                <h3>行业方案</h3>
+                <h3>成功案例</h3>
                 <ul>
                     <li><a href="/list_91.html" target="_blank">制药/生物/器械</a></li>
                     <li><a href="/list_92.html" target="_blank">地产/建筑/装潢</a></li>
