--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -8,11 +8,11 @@
                 <div class="sub-nav">
                     <ul class="list-group">
                         <li [ngClass]="{activeli:urlpath.includes('brief')}"><a href="/about/brief">企业介绍</a></li>
-                        <li [ngClass]="{activeli:urlpath.includes('culture')}"><a href="/about/culture">企业文化</a></li>
-                        <li [ngClass]="{activeli:urlpath.includes('concept')}"><a href="/about/concept">产品理念</a></li>
+                        <li [ngClass]="{activeli:urlpath.includes('state')}"><a href="/about/state">企业动态</a></li>
                         <li [ngClass]="{activeli:urlpath.includes('brand')}"><a href="/about/brand">企业品牌</a></li>
                         <li [ngClass]="{activeli:urlpath.includes('style')}"><a href="/about/style">企业风采</a></li>
-                        <!-- <li [ngClass]="{activeli:urlpath.includes('state')}"><a href="/about/state">企业动态</a></li> -->
+                        <li [ngClass]="{activeli:urlpath.includes('culture')}"><a href="/about/culture">企业文化</a></li>
+                        <li [ngClass]="{activeli:urlpath.includes('concept')}"><a href="/about/concept">产品理念</a></li>
                         <li [ngClass]="{activeli:urlpath.includes('join')}"><a href="/about/join">加入我们</a></li>
                         <li [ngClass]="{activeli:urlpath.includes('contact')}"><a href="/about/contact">联系我们</a></li>
                     </ul>
